[package]
name = "ic-radix-rs"
version = "0.0.3"
authors = ["hideyoshi"]
edition = "2018"
description = "A library for interacting Radix DLT within the Internet Computer"
license = "MIT"
tags = ["ic", "radix", "dlt", "internet-computer"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
tokio = { version = "1.0", optional = true, features = ["full"] }
jsonrpc-core = "18.0.0"
futures = "0.3.30"
anyhow = "1.0.83"
derive_builder = "0.20.0"
async-trait = "0.1.80"
serde_with = "^2.0"

[dev-dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
