[package]
name = "examples_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13.3"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-radix-rs = { path = "../../" }
serde = "1.0.202"
radix-engine-toolkit-uniffi = "2.0.1"
